Rework difficulties